--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "@rmwc/provider": "^5.2.1",
         "@rmwc/theme": "^5.2.1",
         "axios": "^0.17.1",
-        "d3": "^5.9.2",
+        "d3-hierarchy": "^1.1.8",
+        "d3-selection": "^1.4.0",
+        "d3-transition": "^1.2.0",
         "firebase": "^5.9.2",
         "immutable": "^3.8.2",
         "normalize.css": "^8.0.1",
