--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "description": "App",
     "author": "ievgen11",
     "dependencies": {
+        "@rmwc/circular-progress": "^5.3.1",
+        "@rmwc/fab": "^5.3.1",
+        "@rmwc/icon": "^5.3.1",
         "@rmwc/provider": "^5.2.1",
-        "@rmwc/theme": "^5.2.1",
+        "@rmwc/theme": "^5.3.1",
         "axios": "^0.17.1",
         "classnames": "^2.2.6",
         "d3-hierarchy": "^1.1.8",
