--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "classnames": "^2.2.6",
         "d3-hierarchy": "^1.1.8",
         "d3-selection": "^1.4.0",
+        "d3-transform": "^1.0.5",
         "d3-transition": "^1.2.0",
         "d3-zoom": "^1.7.3",
         "firebase": "^5.9.2",
