--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@rmwc/fab": "^5.3.1",
         "@rmwc/icon": "^5.3.1",
         "@rmwc/provider": "^5.2.1",
+        "@rmwc/textfield": "^5.4.2",
         "@rmwc/theme": "^5.3.1",
         "axios": "^0.17.1",
         "classnames": "^2.2.6",
