--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "description": "App",
     "author": "ievgen11",
     "dependencies": {
+        "@rmwc/button": "^5.4.2",
         "@rmwc/circular-progress": "^5.3.1",
         "@rmwc/fab": "^5.3.1",
         "@rmwc/icon": "^5.3.1",
         "@rmwc/provider": "^5.2.1",
         "@rmwc/textfield": "^5.4.2",
         "@rmwc/theme": "^5.3.1",
+        "@rmwc/typography": "^5.4.2",
         "axios": "^0.17.1",
         "classnames": "^2.2.6",
         "d3-hierarchy": "^1.1.8",
