--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
         "d3-transform": "^1.0.5",
         "d3-transition": "^1.2.0",
         "d3-zoom": "^1.7.3",
-        "firebase": "^5.9.2",
+        "faker": "^4.1.0",
         "immutable": "^3.8.2",
         "normalize.css": "^8.0.1",
         "react": "^16.1.1",
         "react-dom": "^16.1.1",
-        "react-json-view": "^1.19.1",
+        "react-json-tree": "^0.11.2",
         "react-redux": "^5.0.5",
         "react-router-dom": "^4.3.1",
         "react-router-redux": "^4.0.7",
