--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@rmwc/fab": "^5.3.1",
         "@rmwc/icon": "^5.3.1",
         "@rmwc/provider": "^5.2.1",
+        "@rmwc/switch": "^5.4.3",
         "@rmwc/textfield": "^5.4.2",
         "@rmwc/theme": "^5.3.1",
         "@rmwc/typography": "^5.4.2",
