--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "d3-project",
+    "name": "d3-hierarchy",
     "version": "0.0.1",
-    "description": "App",
+    "description": "React + Redux + Immutable + D3.js",
     "author": "ievgen11",
     "dependencies": {
         "@rmwc/button": "^5.4.2",
