--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,6 @@
 {
-    "short_name": "App",
-    "name": "D3 Project",
-    "icons": [
-        {
-            "src": "icon.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
-            "type": "image/x-icon"
-        }
-    ],
+    "short_name": "D3-Hierarchy",
+    "name": "D3 Hierarchy",
     "start_url": "./index.html",
     "display": "standalone",
     "theme_color": "#000000",
